--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  background-color: rgb(92, 92, 92);
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  min-width: 100vh;
 }
 
 .App-header {
+  text-align: center;
   background-color: #282c34;
   min-height: 100vh;
+  min-width: 200vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  font-family: "Edu Tas";
 }
 
-.App-link {
-  color: #61dafb;
+.timer {
+  position: absolute;
+  top: -90px;
+  left: 5px;
+  font-size: 40px;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.loop {
+  border: 1px solid black;
+  background-color: rgb(240, 239, 237);
+  display: inline-flex;
+  font-size: 100px;
+}
+
+.card-wrapper {
+  position: relative;
+  border-radius: 10px;
+  border-color: black;
+  font-family: "Edu Tas";
+}
+
+.buttons {
+  padding: 20px;
+}
+
+.card-wrapper .card {
+  margin: 10px;
+  border-radius: 50px;
+  min-width: 182px;
+}
+
+.card-text {
+  text-align: center;
+  border-radius: 50px;
+}
+
+.answers-container {
+  display: flex;
+  justify-content: center;
+}
+
+.answers {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  font-size: 100px;
+  max-width: 816px;
 }
